# Damas_versaoquedeu_errrado

damas/: .gitignore  CMakeLists.txt  README.md
damas/Batches/: Compila.bat  CompilaTudo.bat  GeraMake.bat  GeraTudo.bat  Limpa.bat  TestaTudo.bat  TestaTudoArndt.bat  TestaTudoEntregue.bat  Tudo.bat  TudoArndt.bat  TudoEntregue.bat  teste.sh
damas/Composicao/: TESTELISTA.comp  TESTELISTA.list  TESTELISTA.make  TESTEPECA.comp  TESTEPECA.list  TESTEPECA.make  TESTETABULEIRO.comp  TESTETABULEIRO.list  TESTETABULEIRO.make
damas/Docs/: LEIAME.txt  relatorio-henrique.txt  relatorio-marcelo.txt
damas/Fontes/: lista.c  lista.h  main.c  peca.c  peca.h  tabuleiro.c  tabuleiro.h  testlista.c  testpeca.c  testtabuleiro.c
damas/Objetos/: ArcaboucoTeste.lib  TESTELISTA.build  TESTEPECA.build  TESTETABULEIRO.build
damas/Produto/: TESTELISTA.err  TESTEPECA.err  TESTETABULEIRO.err  testelista  testelistaint  testepeca  testetabuleiro  tudo.err
damas/Scripts/: estatisticas  testelista.script  testelistaArndt.script  testepeca.script  testetabuleiro.script
damas/cmake/: testelista.cmake  testepeca.cmake  testetabuleiro.cmake
